python/testData/inspections/PyUnusedLocalVariableInspection/incompleteFunctionWithoutName.py
class Class:
    @property
    def<error descr="Identifier expected"><caret> </error>(self):
        return
